# message-queue-cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindLZ4.cmake  FindLibuv.cmake  FindSnappy.cmake  GetGitRevisionDescription.cmake
include/: queue_store.h  queue_store_config.h
src/: benchmarker.cpp  queue_store.cpp
src/io/: Barrier.hpp  ConcurrentSet.hpp  asyncfileio.hpp  blockingQueue.hpp
src/utils/: log.c  log.h  serialization.cpp  serialization.h  utils.cpp  utils.h
